--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div fxLayout="row" fxLayoutGap="10px">
     <button 
         mat-raised-button color="primary" 
@@ -12,6 +11,7 @@
         expand
         [config]="GridParameters"
         [dynamic-components]="DynamicComponents">
+        asdfasdf
     </lcu-data-grid>
 </div>
 <router-outlet></router-outlet>
