AB#8783 update pipe in column defs to be a string or a function

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -110,7 +110,7 @@
 
             <!--Toggle data value on and off and set pipes, if available-->
             <!--column.pipe value comes from columnDefinition-->
-          <span *ngIf="column.ShowValue">{{ item[column.ColType] | dataPipes: column.Pipe }}</span>
+          <span *ngIf="column.ShowValue">{{ item[column.ColType] | dataPipes: column.SetPipe(item, column.Pipe) }}</span>
         </span>
       </td>
     </ng-container>
