--- a/projects/common/src/lib/controls/data-grid/data-grid.component.scss
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.scss
@@ -28,8 +28,33 @@
   .details-element-row td {
     border-bottom-width: 0;
   }
-
+  
   .details-con {
     overflow: hidden;
   }
+
+ @mixin mat-cell-mobile {
+  display: flex;
+  padding-left: 10px;
+  padding-top: 10px;
+  flex-direction: column;
+ }
+
+ .mobile-cell {
+  @include mat-cell-mobile;
+ }
+
+  @media (max-width: 600px) {
+    .mat-cell {
+      @include mat-cell-mobile;
+    }
+
+    .mobile-label {
+      display: none;
+    }
+ 
+  }
+  
+  
+  
 }
