AB#9166 missed a save

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -64,6 +64,9 @@
                  fxLayoutGap="10px"
                  fxLayoutAlign="start center">
         
+                 <!-- 
+                   In mobile mode add column name next to the values
+                  -->
               <div *ngIf="IsMobile === true">{{column.Title }}: </div>
 
             <!--Toggle icons on and off-->
