AB#9166 removed extra colon

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -67,7 +67,11 @@
                  <!-- 
                    In mobile mode add column name next to the values
                   -->
-              <div *ngIf="IsMobile === true">{{column.Title }}: </div>
+              <div *ngIf="IsMobile === true">
+                <span>
+                  {{column.Title }}: 
+                </span> 
+              </div>
 
             <!--Toggle icons on and off-->
             <i 
