AB#9166 removed extra colon

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -69,7 +69,7 @@
                   -->
               <div *ngIf="IsMobile === true">
                 <span>
-                  {{column.Title }}: 
+                  {{column.Title }} 
                 </span> 
               </div>
 
