AB#9298 add min width 100 percent

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -17,7 +17,7 @@
   <div fxLayout="column">
     <mat-progress-bar mode="indeterminate" *ngIf="ShowLoader"></mat-progress-bar>
     <table 
-      fxFlex
+      class='table'
       mat-table 
       matSort
       [dataSource]="dataSource"
