AB#9298 add important flag to vertical align for testing

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.scss
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.scss
@@ -4,7 +4,7 @@
   .table {
     min-width: 100%;
     th, td {
-      vertical-align: center;
+      vertical-align: center !important;
     }
   }
 
