AB#9298 change class name to not conflict with fereeboard

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -17,7 +17,7 @@
   <div fxLayout="column">
     <mat-progress-bar mode="indeterminate" *ngIf="ShowLoader"></mat-progress-bar>
     <table 
-      class='table'
+      class='table-overwrites'
       mat-table 
       matSort
       [dataSource]="dataSource"
