--- a/projects/common/src/lib/controls/data-grid/data-grid.component.scss
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 :host {
-  .table {
+  .table-overwrites {
     min-width: 100%;
     th, td {
       vertical-align: center !important;
