--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="10px">
+<div fxLayout="row" class="margin-2">
     <button 
         mat-raised-button color="primary" 
         (click)="GridData()" 
@@ -6,7 +6,7 @@
         Get Grid Data
     </button>    
 </div>
-<div fxLayout="column" fxLayoutGap="10px">
+<div fxLayout="column" class="margin-2">
     <lcu-data-grid 
         expand
         [config]="GridParameters"
