--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -32,7 +32,9 @@
           *matHeaderCellDef 
           mat-sort-header 
           [disabled]="!column.Sortable" 
-          class="padding-right-3 mobile-label">
+          [ngStyle]="{'max-width': column.ColWidth ? Width(column.ColWidth): null}"
+          [ngClass]="{'mobile-label': IsMobile}"
+          class="padding-right-3">
 
           <!--
             Show select checkbox in the header
@@ -54,7 +56,7 @@
             class="padding-right-3"
             [matTooltip]="column.Tooltip ? item[column.ColType] : '' "
             [ngClass]="{'cell-padding': Expand, 'is-mobile': IsMobile === true}"
-            [ngStyle]="{'max-width': column.ColWidth ? Width(column.ColWidth): null,
+            [ngStyle]="{'max-width': (column.ColWidth && !IsMobile) ? Width(column.ColWidth): null,
                         'background-color' : column.ColBGColor ? column.ColBGColor : null}">
           <mat-checkbox *ngIf="ToggleSelection(Config, column)"
                         (click)="$event.stopPropagation()"
@@ -72,7 +74,7 @@
                   -->
               <div class="margin-2" *ngIf="IsMobile === true">
                 <span>
-                  {{column.Title }} 
+                  {{ column.Title }} : 
                 </span> 
               </div>
 
