AB#9179 conditional title colon

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -74,7 +74,7 @@
                   -->
               <div class="margin-2" *ngIf="IsMobile === true">
                 <span>
-                  {{ column.Title }} : 
+                  {{ column.Title }} <span *ngIf="column.Title">: </span>
                 </span> 
               </div>
 
