AB#9179 min-width 100

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.scss
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.scss
@@ -5,7 +5,7 @@
   $padding-vert: 5px;
 
   .table-overwrites {
-    // min-width: 100%;
+    min-width: 100%;
     th, td {
       vertical-align: center;
     }
