--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -53,7 +53,7 @@
 
         <!-- [ngClass]="{'text-ellipsis': (column.ColWidth && column.Ellipsis)}" -->
         <td mat-cell *matCellDef="let item"
-            class="padding-right-3"
+           
             [matTooltip]="column.Tooltip ? item[column.ColType] : '' "
             [ngClass]="{'cell-padding': Expand, 'is-mobile': IsMobile === true}"
             [ngStyle]="{'max-width': (column.ColWidth && !IsMobile) ? Width(column.ColWidth): null,
@@ -86,6 +86,13 @@
               [ngClass]="column.SetIcon(item)"
               [ngClass]="column.IconColor">
             </i>
+
+            <img 
+              [ngClass]="{'image-cell': column.Image}"
+              style=" max-width: 100%;height: auto;"
+              *ngIf="column.Image" 
+              [src]="column.Image" 
+              alt="">
 
             <!--When adding a button to the table cell-->
             <button 
